[package]
edition = "2021"
name = "bevy_magic_light_2d"
version = "1.0.0-dev"
description = "2D lighting for Bevy"
homepage = "https://github.com/zaycev/bevy-magic-light-2d"
repository = "https://github.com/zaycev/bevy-magic-light-2d"
authors = ["Vladimir Zaytsev"]
license-file = "LICENSE"
readme = "README.md"

[lib]
name = "magic_2d"
path = "src/lib.rs"

[features]
default = ["egui"]
egui = ["dep:bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.14.1", default-features = false, features = [
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_winit",
  "bevy_asset",
  "bevy_sprite",
  "bevy_pbr",
] }
bevy-inspector-egui = { version = "0.25.2", optional = true }
log = "0.4.20"
rand = "0.8.5"

[dev-dependencies]
bevy = { version = "0.14.1", default-features = false, features = [
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_winit",
  "bevy_asset",
  "bevy_sprite",
  "bevy_pbr",
  "embedded_watcher",
] }

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
incremental = true
