[package]
edition = "2021"
name = "bevy_magic_light_2d"
version = "0.8.1"
description = "Experimental dynamic 2D global illumination system for Bevy, based on SDF ray-marching and screen space irradiance cache probes"
homepage = "https://github.com/zaycev/bevy-magic-light-2d"
repository = "https://github.com/zaycev/bevy-magic-light-2d"
authors = ["Vladimir Zaytsev"]
license-file = "LICENSE"
readme = "README.md"

[features]
default = ["egui"]
egui = ["dep:bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.14.1", default-features = false, features = [
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_winit",
  "bevy_asset",
  "bevy_sprite",
  "bevy_pbr",
  "embedded_watcher",
  "multi_threaded",
] }
bevy-inspector-egui = { version = "0.25.2", optional = true }
log = "0.4.20"
rand = "0.8.5"

[dev-dependencies]
bevy = "0.14.1"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
debug = true
incremental = true

[profile.dev]
codegen-units = 16
opt-level = 0
debug = true
incremental = true
